--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,7 +30,7 @@ jobs:
         uses: actions/checkout@v5
         with:
           repository: SagerNet/sing-box
-          ref: v${{ github.event.inputs.version }}
+          ref: v${{ inputs.version }}
           fetch-depth: 0
       - name: Setup Go
         uses: actions/setup-go@v6
@@ -46,7 +46,7 @@ jobs:
           set -xeuo pipefail
           mkdir -p dist
           go build -v -trimpath -o dist/sing-box -tags "${BUILD_TAGS}" \
-          -ldflags '-s -buildid= -X github.com/sagernet/sing-box/constant.Version=${{ github.event.inputs.version }}' \
+          -ldflags '-s -buildid= -X github.com/sagernet/sing-box/constant.Version=${{ inputs.version }}' \
           ./cmd/sing-box
         env:
           CGO_ENABLED: "0"
@@ -56,19 +56,19 @@ jobs:
       - name: Prepare
         run: |
           set -xeuo pipefail
-          mkdir -p output/sing-box
-          mv dist/sing-box output/sing-box
-          cp LICENSE output/sing-box
-          cd output
-          mv sing-box sing-box-${{ github.event.inputs.version }}-${{ matrix.os }}-${{ matrix.arch }}${{ matrix.goarm && format('v{0}', matrix.goarm) }}
-          tar -czf sing-box-${{ github.event.inputs.version }}-${{ matrix.os }}-${{ matrix.arch }}${{ matrix.goarm && format('v{0}', matrix.goarm) }}.tar.gz \
-          sing-box-${{ github.event.inputs.version }}-${{ matrix.os }}-${{ matrix.arch }}${{ matrix.goarm && format('v{0}', matrix.goarm) }}
-          rm -rf sing-box-${{ github.event.inputs.version }}-${{ matrix.os }}-${{ matrix.arch }}${{ matrix.goarm && format('v{0}', matrix.goarm) }}
+          mkdir -p dist/output
+          mv dist/sing-box dist/output
+          cp LICENSE dist/output
+          cd dist
+          mv output sing-box-${{ inputs.version }}-${{ matrix.os }}-${{ matrix.arch }}${{ matrix.goarm && format('v{0}', matrix.goarm) }}
+          tar -czf sing-box-${{ inputs.version }}-${{ matrix.os }}-${{ matrix.arch }}${{ matrix.goarm && format('v{0}', matrix.goarm) }}.tar.gz \
+          sing-box-${{ inputs.version }}-${{ matrix.os }}-${{ matrix.arch }}${{ matrix.goarm && format('v{0}', matrix.goarm) }}
+          rm -rf dist/sing-box-${{ inputs.version }}-${{ matrix.os }}-${{ matrix.arch }}${{ matrix.goarm && format('v{0}', matrix.goarm) }}
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
           name: binary-${{ matrix.os }}_${{ matrix.arch }}${{ matrix.goarm && format('v{0}', matrix.goarm) }}
-          path: output/*
+          path: "dist"
   release:
     name: Release
     runs-on: ubuntu-latest
